--- a/FIZ228_20232_Final_OnurAygun.ipynb
+++ b/FIZ228_20232_Final_OnurAygun.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN52VyzsshYwNiUQO14DQqU",
+      "authorship_tag": "ABX9TyOR1bVjjTHu8XQiAjMj9WhG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -919,7 +919,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 693
+          "height": 728
         },
         "id": "TDeHSl0fWUAS",
         "outputId": "bc6ee3a6-d6bd-4c43-ecf5-296fcc4b6ec6"
@@ -952,9 +952,51 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 3rd Question #"
+      ],
       "metadata": {
         "id": "6j0EkVswZHZt"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def model(x , y):\n",
+        "    y_y = y - x\n",
+        "    return y_y"
+      ],
+      "metadata": {
+        "id": "RlaxB9habXj4"
+      },
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,2):\n",
+        "    h = 0.01\n",
+        "    x = (1,2)\n",
+        "    y=(0, 4.71828)\n",
+        "    k1 = model(x[i-1],y[1])\n",
+        "    k2 = model(x[i-1]+0.5*h,y[1]+0.5*k1*h)\n",
+        "    k3 = model(x[i-1]+0.5*h,y[1]+0.5*k2*h)\n",
+        "    k4 = model(x[i-1]+h,y[1]+k3*h)\n"
+      ],
+      "metadata": {
+        "id": "HDu6MtPScEkw"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wcSwQM0_ej4V"
       },
       "execution_count": null,
       "outputs": []
